@@ -8,7 +8,7 @@
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
-LTVERSION = 3:5:0
+LTVERSION = 3:6:0
 
 INCLUDES = -I$(srcdir)/..
 
@@ -55,9 +55,11 @@ the_headers =                   \
 lib_LTLIBRARIES   = libid3.la 
 
 libid3_la_SOURCES = $(the_sources)
-CXXFLAGS = -Wall -g
+# CXXFLAGS = -Wall
 libid3_la_LIBADD  = -lz
 libid3_la_LDFLAGS = -version-info $(LTVERSION)
 
 id3includedir      = $(includedir)/id3
 id3include_HEADERS = $(the_headers)
+
+EXTRA_DIST = ChangeLog
